{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 30,
  "lineage": "1ee45371-5a5a-5835-d933-198ba2bb3e34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c306b41dfff32d91",
            "domain": "vpc",
            "id": "eipalloc-0c306b41dfff32d91",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-134-45-44.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.134.45.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DEV NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prd_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4a92ce7fdc2b1e7",
            "domain": "vpc",
            "id": "eipalloc-0b4a92ce7fdc2b1e7",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-52-56-35-122.eu-west-2.compute.amazonaws.com",
            "public_ip": "52.56.35.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PRD NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "PRD NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "stg_nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adf9c420550414c1",
            "domain": "vpc",
            "id": "eipalloc-0adf9c420550414c1",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-130-54-115.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.54.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "STG NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "STG NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:internet-gateway/igw-00d248f38c7caf941",
            "id": "igw-00d248f38c7caf941",
            "owner_id": "311747045935",
            "tags": {
              "Name": "DEV IGW"
            },
            "tags_all": {
              "Name": "DEV IGW"
            },
            "vpc_id": "vpc-0138d458294c2378d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prd_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:internet-gateway/igw-077203affe963c420",
            "id": "igw-077203affe963c420",
            "owner_id": "311747045935",
            "tags": {
              "Name": "PRD IGW"
            },
            "tags_all": {
              "Name": "PRD IGW"
            },
            "vpc_id": "vpc-0e880266fe719c66f"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stg_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:internet-gateway/igw-079deb4d96df5bcfd",
            "id": "igw-079deb4d96df5bcfd",
            "owner_id": "311747045935",
            "tags": {
              "Name": "STG IGW"
            },
            "tags_all": {
              "Name": "STG IGW"
            },
            "vpc_id": "vpc-07a49f65e1d823ccf"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c306b41dfff32d91",
            "connectivity_type": "public",
            "id": "nat-00f42a4a4f3d53e9f",
            "network_interface_id": "eni-0cf7ba7a0651cc5ce",
            "private_ip": "10.82.1.214",
            "public_ip": "18.134.45.44",
            "subnet_id": "subnet-0da4e7d4af9b4d9f0",
            "tags": {
              "Name": "DEV NAT Gateway"
            },
            "tags_all": {
              "Name": "DEV NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_subnet.dev_publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prd_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4a92ce7fdc2b1e7",
            "connectivity_type": "public",
            "id": "nat-095ed166747c86596",
            "network_interface_id": "eni-00d943f54553fd7f0",
            "private_ip": "10.80.1.83",
            "public_ip": "52.56.35.122",
            "subnet_id": "subnet-03fe6f5d4e6828f79",
            "tags": {
              "Name": "PRD NAT Gateway"
            },
            "tags_all": {
              "Name": "PRD NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_subnet.prd_publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "stg_NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0adf9c420550414c1",
            "connectivity_type": "public",
            "id": "nat-025bb920db0ab18c5",
            "network_interface_id": "eni-07d7ae3fbad38f24c",
            "private_ip": "10.81.1.186",
            "public_ip": "18.130.54.115",
            "subnet_id": "subnet-00300816599d3f05b",
            "tags": {
              "Name": "STG NAT Gateway"
            },
            "tags_all": {
              "Name": "STG NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-02a27809fd3e987a8",
            "id": "rtb-02a27809fd3e987a8",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00f42a4a4f3d53e9f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV Private Route Table"
            },
            "tags_all": {
              "Name": "DEV Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0138d458294c2378d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_subnet.dev_publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-0e3d94f867908d4b0",
            "id": "rtb-0e3d94f867908d4b0",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00d248f38c7caf941",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DEV Public Route Table"
            },
            "tags_all": {
              "Name": "DEV Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0138d458294c2378d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-00575f9cf88e51192",
            "id": "rtb-00575f9cf88e51192",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-095ed166747c86596",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRD Private Route Table"
            },
            "tags_all": {
              "Name": "PRD Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e880266fe719c66f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_nat_gateway.prd_NATgw",
            "aws_subnet.prd_publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prd_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-00a0d39902aefb90b",
            "id": "rtb-00a0d39902aefb90b",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077203affe963c420",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRD Public Route Table"
            },
            "tags_all": {
              "Name": "PRD Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e880266fe719c66f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-0dd92c551f1d3da2c",
            "id": "rtb-0dd92c551f1d3da2c",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-025bb920db0ab18c5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "STG Private Route Table"
            },
            "tags_all": {
              "Name": "STG Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a49f65e1d823ccf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_nat_gateway.stg_NATgw",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stg_PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:route-table/rtb-02a5e42b612bf09b2",
            "id": "rtb-02a5e42b612bf09b2",
            "owner_id": "311747045935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079deb4d96df5bcfd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "STG Public Route Table"
            },
            "tags_all": {
              "Name": "STG Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a49f65e1d823ccf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c9d2a2a8e0d10a8",
            "route_table_id": "rtb-02a27809fd3e987a8",
            "subnet_id": "subnet-007208197fc78e2a0"
          },
          "dependencies": [
            "aws_eip.dev_nateIP",
            "aws_nat_gateway.dev_NATgw",
            "aws_route_table.dev_PrivateRT",
            "aws_subnet.dev_privatesubnets",
            "aws_subnet.dev_publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a685adaa7c9b3e93",
            "route_table_id": "rtb-0e3d94f867908d4b0",
            "subnet_id": "subnet-0da4e7d4af9b4d9f0"
          },
          "dependencies": [
            "aws_internet_gateway.dev_IGW",
            "aws_route_table.dev_PublicRT",
            "aws_subnet.dev_publicsubnets",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0344925536762b6a5",
            "route_table_id": "rtb-00575f9cf88e51192",
            "subnet_id": "subnet-0aefa03b647e6bb3d"
          },
          "dependencies": [
            "aws_eip.prd_nateIP",
            "aws_nat_gateway.prd_NATgw",
            "aws_route_table.prd_PrivateRT",
            "aws_subnet.prd_privatesubnets",
            "aws_subnet.prd_publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prd_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbe61b18ea93c9ca",
            "route_table_id": "rtb-00a0d39902aefb90b",
            "subnet_id": "subnet-03fe6f5d4e6828f79"
          },
          "dependencies": [
            "aws_internet_gateway.prd_IGW",
            "aws_route_table.prd_PublicRT",
            "aws_subnet.prd_publicsubnets",
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_PrivateRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ae540461e9153c3",
            "route_table_id": "rtb-0dd92c551f1d3da2c",
            "subnet_id": "subnet-0485988aea7672ee6"
          },
          "dependencies": [
            "aws_eip.stg_nateIP",
            "aws_nat_gateway.stg_NATgw",
            "aws_route_table.stg_PrivateRT",
            "aws_subnet.stg_privatesubnets",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "stg_PublicRTassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce714e8717294da2",
            "route_table_id": "rtb-02a5e42b612bf09b2",
            "subnet_id": "subnet-00300816599d3f05b"
          },
          "dependencies": [
            "aws_internet_gateway.stg_IGW",
            "aws_route_table.stg_PublicRT",
            "aws_subnet.stg_publicsubnets",
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-007208197fc78e2a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.82.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007208197fc78e2a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Private Subnet"
            },
            "tags_all": {
              "Name": "DEV Private Subnet"
            },
            "vpc_id": "vpc-0138d458294c2378d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-0da4e7d4af9b4d9f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.82.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da4e7d4af9b4d9f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DEV Public Subnet"
            },
            "tags_all": {
              "Name": "DEV Public Subnet"
            },
            "vpc_id": "vpc-0138d458294c2378d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-0aefa03b647e6bb3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.80.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aefa03b647e6bb3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Private Subnet"
            },
            "tags_all": {
              "Name": "PRD Private Subnet"
            },
            "vpc_id": "vpc-0e880266fe719c66f"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prd_publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-03fe6f5d4e6828f79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.80.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fe6f5d4e6828f79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRD Public Subnet"
            },
            "tags_all": {
              "Name": "PRD Public Subnet"
            },
            "vpc_id": "vpc-0e880266fe719c66f"
          },
          "dependencies": [
            "aws_vpc.prd"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_privatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-0485988aea7672ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.81.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0485988aea7672ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Private Subnet"
            },
            "tags_all": {
              "Name": "STG Private Subnet"
            },
            "vpc_id": "vpc-07a49f65e1d823ccf"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stg_publicsubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:subnet/subnet-00300816599d3f05b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.81.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00300816599d3f05b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311747045935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "STG Public Subnet"
            },
            "tags_all": {
              "Name": "STG Public Subnet"
            },
            "vpc_id": "vpc-07a49f65e1d823ccf"
          },
          "dependencies": [
            "aws_vpc.stg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:vpc/vpc-0138d458294c2378d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.82.0.0/16",
            "default_network_acl_id": "acl-0e70d04f1317c5d2d",
            "default_route_table_id": "rtb-01c7ed0df4bdeb04e",
            "default_security_group_id": "sg-037fb76e82efb730b",
            "dhcp_options_id": "dopt-01405e481c25ccd79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0138d458294c2378d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c7ed0df4bdeb04e",
            "owner_id": "311747045935",
            "tags": {
              "Name": "DEV VPC"
            },
            "tags_all": {
              "Name": "DEV VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prd",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:vpc/vpc-0e880266fe719c66f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.80.0.0/16",
            "default_network_acl_id": "acl-03f481fdfcff88f0a",
            "default_route_table_id": "rtb-01d609706f6371969",
            "default_security_group_id": "sg-0565900be9c863c3f",
            "dhcp_options_id": "dopt-01405e481c25ccd79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e880266fe719c66f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d609706f6371969",
            "owner_id": "311747045935",
            "tags": {
              "Name": "PRD VPC"
            },
            "tags_all": {
              "Name": "PRD VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:311747045935:vpc/vpc-07a49f65e1d823ccf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.81.0.0/16",
            "default_network_acl_id": "acl-0aefe4c48904a3040",
            "default_route_table_id": "rtb-0be5b9a26678fbd55",
            "default_security_group_id": "sg-085f65e9270042cd7",
            "dhcp_options_id": "dopt-01405e481c25ccd79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07a49f65e1d823ccf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be5b9a26678fbd55",
            "owner_id": "311747045935",
            "tags": {
              "Name": "STG VPC"
            },
            "tags_all": {
              "Name": "STG VPC"
            }
          }
        }
      ]
    }
  ]
}